correções de portugues e cor

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="crematorio-pet">
 
       <div class="logo-text">
-        <img src="img/Logo Crematorio Pet.png">
+        <img src="img/Logo Pet bc.png">
         <p>Localizado em Dourados-MS, nosso centro de convivência PET foi pensado para trazer qualidade de vida e diversão, além de proporcionar boas lembranças com o seu amiguinho!</p>
       </div>
       
@@ -82,7 +82,7 @@
     <section class="images-video">
 
       <div class="content-image">
-        <video src="video/Pet Primavera Final - mais leve.mp4" autoplay="autoplay" controls="controls"></video>
+        <video src="video/Pet Primavera Final.mp4" autoplay muted loop controls="controls"></video>
       </div>
 
       <div class="content-image reverse">
@@ -111,7 +111,7 @@
             
             <img src="img/petshop.png">
           </div>
-          <span>Clínicas Veterinárias</span>
+          <span>Banho e Tosa</span>
         </div>
   
         <div class="container-descontos reverse">
