--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main class="main">
 
     <section class="home">
-      <img src="img/crematorio.jpg" alt="">
+      <img src="img/home.jpeg" alt="">
       <div class="formulario-home">
 
         <p>Já pensou em ter um local exclusivo para o seu PET? <br> Agora Dourados conta com um ambiente pensado especialmente para o seu amiguinho PET, que garante conforto e segurança para o lazer ao lado de quem você ama!</p>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="content-image">
-        <img src="img/doguinho3.jpg" alt="">
+        <img src="img/crematorio.jpg" alt="">
         <span>Somos apaixonados por Pets e temos a satisfação de sermos o primeiro crematório pet do Estado do MS.</span>
       </div>
       
@@ -109,7 +109,7 @@
         <div class="container-descontos">
           <div class="bolinha">
             
-            <img src="img/petshop.png">
+            <img src="img/banheira.png">
           </div>
           <span>Banho e Tosa</span>
         </div>
