--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="crematorio-pet">
 
       <div class="logo-text">
-        <img src="img/Logo Pet bc.png">
+        <img src="img/logo-pet-bc.png">
         <p>Localizado em Dourados-MS, nosso centro de convivência PET foi pensado para trazer qualidade de vida e diversão, além de proporcionar boas lembranças com o seu amiguinho!</p>
       </div>
       
@@ -133,7 +133,7 @@
         <div class="container-descontos reverse">
           <div class="bolinha">
             
-            <img src="img/logo pet bc.png">
+            <img src="img/logo-fpet-bc.png">
           </div>
           <span>Expresse todo seu Amor
             e gratidão por seu
