--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container-descontos reverse">
           <div class="bolinha">
             
-            <img src="img/logo-fpet-bc.png">
+            <img src="img/logo-pet-bc.png">
           </div>
           <span>Expresse todo seu Amor
             e gratidão por seu
